--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,10 @@ variables:
   COMPOSER_CACHE_DIR: "$CI_PROJECT_DIR/composer_cache"
 
 before_script:
-  - apt-get update && apt-get install -y unzip
+  - apt-get update && apt-get install -y unzip libzip-dev
+  - pecl install redis
+  - docker-php-ext-enable redis
+  - docker-php-ext-install sockets zip
   - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
   - composer install --no-interaction --prefer-dist --optimize-autoloader
 
