--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["...", "python311Packages.supervisor"]
+nixPkgs = ["...", "php82Packages.redis", "python311Packages.supervisor"]
 
 [phases.build]
 cmds = [
