--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^12",
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10",
+        "ext-redis": "*",
         "spatie/laravel-sitemap": "^7.3"
     },
     "require-dev": {
