--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,47 +2,50 @@ default:
   image: php:8.4-cli
 
 stages:
-  - auto-fixes
-  - test
+- auto-fixes
+- test
 
 variables:
   COMPOSER_CACHE_DIR: "$CI_PROJECT_DIR/composer_cache"
 
-before_script:
-  - apt-get update && apt-get install -y unzip libzip-dev
-  - pecl install redis
-  - docker-php-ext-enable redis
-  - docker-php-ext-install sockets zip
-  - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-  - composer install --no-interaction --prefer-dist --optimize-autoloader
-
 cache:
   paths:
-    - vendor/
-    - $COMPOSER_CACHE_DIR
+  - vendor/
+  - $COMPOSER_CACHE_DIR
+
+before_script:
+- apt-get update && apt-get install -y unzip libzip-dev
+- pecl install redis
+- docker-php-ext-enable redis
+- docker-php-ext-install sockets zip
+- curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+- composer install --no-interaction --prefer-dist --optimize-autoloader
 
 auto-fixes:
   stage: auto-fixes
   script:
-    - ./vendor/bin/rector process --ansi
-    - ./vendor/bin/pint
-    - |
-      if [ -n "$(git status --porcelain)" ]; then
-        git config --global user.name "${GITLAB_USER_NAME}"
-        git config --global user.email "${GITLAB_USER_EMAIL}"
-        git add .
-        git commit -m "ci: auto-fixes from pint and rector"
-        git push origin "HEAD:$CI_COMMIT_REF_NAME"
-      fi
+  - ./vendor/bin/rector process --ansi
+  - ./vendor/bin/pint
+  - |
+    if [ -n "$(git status --porcelain)" ]; then
+      git config --global user.name "${GITLAB_USER_NAME}"
+      git config --global user.email "${GITLAB_USER_EMAIL}"
+      git remote set-url origin "https://gitlab-ci-token:${CI_JOB_TOKEN}@${CI_SERVER_HOST}/${CI_PROJECT_PATH}.git"
+      git add .
+      git commit -m "ci: auto-fixes from pint and rector"
+      git push origin "HEAD:$CI_COMMIT_REF_NAME"
+    fi
   rules:
-    - if: '$CI_COMMIT_MESSAGE !~ /ci: auto-fixes/'
+  - if: '$CI_COMMIT_MESSAGE !~ /ci: auto-fixes/'
 
 ci:
   stage: test
   script:
-    - php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - php artisan key:generate
-    - chmod -R 777 storage bootstrap/cache
-    - php artisan test
+  - cp .env.testing .env
+  - php artisan key:generate
+  - chmod -R 777 storage bootstrap/cache
+  - php artisan migrate --force
+  # - php artisan db:seed --force
+  - php artisan test
   needs:
-    - auto-fixes
+  - auto-fixes
