--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 name: CI
 
 on:
+  pull_request:
   push:
     branches:
-      - '**'
-      - '!main'
+      - main
     tags-ignore:
       - '**'
 
@@ -14,11 +14,13 @@ permissions:
 jobs:
   auto-fixes:
     name: "Auto-Fixes (Pint & Rector)"
-    if: "!contains(github.event.head_commit.message, 'ci: auto-fixes')"
+    if: "github.event_name == 'pull_request' && !contains(github.event.head_commit.message, 'ci: auto-fixes')"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -49,14 +51,55 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: 'ci: auto-fixes from pint and rector'
-          branch: ${{ github.head_ref || github.ref_name }}
+          branch: ${{ github.head_ref }}
           commit_options: '--no-verify'
 
-  test:
-    name: "Run Tests"
+  test-pr:
+    name: "Run Tests (PR)"
+    if: "github.event_name == 'pull_request'"
     runs-on: ubuntu-latest
     needs: auto-fixes
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
 
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.4'
+          extensions: redis, sockets, zip
+          tools: composer
+
+      - name: Cache Composer dependencies
+        uses: actions/cache@v4
+        id: composer-cache
+        with:
+          path: vendor
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+
+      - name: Install dependencies
+        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+
+      - name: Prepare environment
+        run: |
+          cp .env.testing .env
+          php artisan key:generate
+          chmod -R 777 storage bootstrap/cache
+
+      - name: Run migrations
+        run: php artisan migrate --force
+
+      - name: Run tests
+        run: php artisan test
+
+  test-main:
+    name: "Run Tests (Main)"
+    if: "github.event_name == 'push' && github.ref == 'refs/heads/main'"
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -91,3 +134,19 @@ jobs:
 
       - name: Run tests
         run: php artisan test
+
+  create-tag:
+    name: "Create Tag"
+    if: "github.event_name == 'push' && github.ref == 'refs/heads/main'"
+    runs-on: ubuntu-latest
+    needs: [test-main]
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Create tag
+        uses: mathieudutour/github-tag-action@v6.1
+        id: tag_version
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: "patch"
