--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,12 +1,7 @@
-name: CI
+name: PR Checks
 
 on:
   pull_request:
-  push:
-    branches:
-      - main
-    tags-ignore:
-      - '**'
 
 permissions:
   contents: write
@@ -14,7 +9,7 @@ permissions:
 jobs:
   auto-fixes:
     name: "Auto-Fixes (Pint & Rector)"
-    if: "github.event_name == 'pull_request' && !contains(github.event.head_commit.message, 'ci: auto-fixes')"
+    if: "!contains(github.event.head_commit.message, 'ci: auto-fixes')"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -56,7 +51,6 @@ jobs:
 
   test-pr:
     name: "Run Tests (PR)"
-    if: "github.event_name == 'pull_request'"
     runs-on: ubuntu-latest
     needs: auto-fixes
     steps:
@@ -95,58 +89,3 @@ jobs:
 
       - name: Run tests
         run: php artisan test
-
-  test-main:
-    name: "Run Tests (Main)"
-    if: "github.event_name == 'push' && github.ref == 'refs/heads/main'"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.4'
-          extensions: redis, sockets, zip
-          tools: composer
-
-      - name: Cache Composer dependencies
-        uses: actions/cache@v4
-        id: composer-cache
-        with:
-          path: vendor
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-
-
-      - name: Install dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
-
-      - name: Prepare environment
-        run: |
-          cp .env.testing .env
-          php artisan key:generate
-          chmod -R 777 storage bootstrap/cache
-
-      - name: Run migrations
-        run: php artisan migrate --force
-
-      - name: Run tests
-        run: php artisan test
-
-  create-tag:
-    name: "Create Tag"
-    if: "github.event_name == 'push' && github.ref == 'refs/heads/main'"
-    runs-on: ubuntu-latest
-    needs: [test-main]
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Create tag
-        uses: mathieudutour/github-tag-action@v6.1
-        id: tag_version
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: "patch"
