--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: PR Checks
+name: Lint
 
 on:
   pull_request:
@@ -48,44 +48,3 @@ jobs:
           commit_message: 'ci: auto-fixes from pint and rector'
           branch: ${{ github.head_ref }}
           commit_options: '--no-verify'
-
-  test-pr:
-    name: "Run Tests (PR)"
-    runs-on: ubuntu-latest
-    needs: auto-fixes
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref }}
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.4'
-          extensions: redis, sockets, zip
-          tools: composer
-
-      - name: Cache Composer dependencies
-        uses: actions/cache@v4
-        id: composer-cache
-        with:
-          path: vendor
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-
-
-      - name: Install dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
-
-      - name: Prepare environment
-        run: |
-          cp .env.testing .env
-          php artisan key:generate
-          chmod -R 777 storage bootstrap/cache
-
-      - name: Run migrations
-        run: php artisan migrate --force
-
-      - name: Run tests
-        run: php artisan test
