--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.1.17",
         "chart.js": "^4.5.1",
+        "date-fns": "^4.1.0",
         "playwright": "^1.57.0"
     }
 }
