--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.1.17",
         "chart.js": "^4.5.1",
-        "date-fns": "^4.1.0",
+        "dayjs": "^1.11.19",
         "playwright": "^1.57.0"
     }
 }
