--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.4",
+        "ext-redis": "*",
         "knuckleswtf/scribe": "^5.5",
         "laravel/framework": "^12",
         "laravel/sanctum": "^4.1",
+        "laravel/socialite": "^5.24",
         "laravel/tinker": "^2.10",
-        "ext-redis": "*",
         "spatie/laravel-sitemap": "^7.3"
     },
     "require-dev": {
