--- a/.env.testing
+++ b/.env.testing
@@ -19,3 +19,7 @@ MAIL_MAILER=array
 
 REDIS_CLIENT=predis
 VITE_APP_NAME="${APP_NAME}"
+
+GITHUB_CLIENT_ID=test
+GITHUB_CLIENT_SECRET=test
+GITHUB_REDIRECT_URI=http://localhost/auth/callback
