--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,9 @@
 name: Lint
 
 on:
-  pull_request:
+  push:
+    branches-ignore:
+      - 'main'
 
 permissions:
   contents: write
@@ -14,8 +16,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref }}
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -46,5 +46,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: 'ci: auto-fixes from pint and rector'
-          branch: ${{ github.head_ref }}
           commit_options: '--no-verify'
