ci(workflow): format daily-update.yml for consistency

--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -9,12 +9,13 @@ on:
 jobs:
   update-dependencies:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
