--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,9 +1,10 @@
 name: Tag
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: [ "CI" ]
+    types:
+    - completed
 
 permissions:
   contents: write
@@ -12,15 +13,15 @@ jobs:
   create-tag:
     name: "Create Tag"
     if: >
-      !contains(github.event.head_commit.message, 'chore(deps): daily dependency update')
+      github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'push' && github.event.workflow_run.head_branch == 'main'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Needed to get all tags for accurate version bumping
-      - name: Create tag
-        uses: mathieudutour/github-tag-action@v6.1
-        id: tag_version
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: "patch"
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - name: Create tag
+      uses: mathieudutour/github-tag-action@v6.1
+      id: tag_version
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        default_bump: "patch"
