--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,13 @@ on:
 jobs:
   auto-fixes:
     name: "Auto-Fixes (Pint & Rector)"
-    if: "!contains(github.event.head_commit.message, 'ci: auto-fixes')"
+    if: github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        ref: ${{ github.head_ref }}
 
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
@@ -45,9 +47,9 @@ jobs:
       with:
         commit_message: 'ci: auto-fixes from pint and rector'
         commit_options: '--no-verify'
+        branch: ${{ github.head_ref }}
 
   test:
-    needs: auto-fixes
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
